--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,5 @@
 <div>
-
+<img src="images/beer.png">
+<a class="nav-item nav-link" href="/beers">Check the Beers!</a>
+<a class="nav-item nav-link" href="/randomBeers">Check a Random Beer</a>
 </div>
